fix video and headshot size on mobile

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -395,7 +395,13 @@ input:-moz-placeholder, textarea:-moz-placeholder
 
 .video
   @extend .six, .columns, .flex-video, .widescreen, .vimeo
-  padding-bottom: 27%
+  height: 265px 
+  padding-bottom: 0 !important
+
+.event-sponsor
+  @extend .six, .columns
+
+
 /* -----------------------------------------
  *   Past Events Styles
  * -----------------------------------------
@@ -405,11 +411,12 @@ input:-moz-placeholder, textarea:-moz-placeholder
 
 .event
   @extend .row
+
+
 /* -----------------------------------------
  *   Speaker Styles
  * -----------------------------------------
 .speakers
-  //@extend .row
 
 .speaker
   @extend .row
@@ -417,10 +424,10 @@ input:-moz-placeholder, textarea:-moz-placeholder
 
 .speaker-headshot
   @extend .two, .columns
-  width: 128px
+  height: 150px
 
 .speaker img
-  width: 100%
+  height: 150px
 
 .speaker-text
   @extend .ten, .columns
